# Flam_Assignment

./: README.md  build.gradle  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  image_processor.cpp  image_processor.h  native-lib.cpp
app/src/main/java/com/example/flamproject/: MainActivity.kt
app/src/main/java/com/example/flamproject/gl/: CameraGLSurfaceView.kt  CameraRenderer.kt
app/src/main/java/com/example/flamproject/jni/: NativeInterface.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
web/: package.json  tsconfig.json
web/src/: index.html  index.ts  styles.css
